refactor: switch on resource schemes